# openGL-triangles

./: CMakeLists.txt  README.md
src/: hello_triangle.cpp  main.cpp
